--- a/config/database.yml
+++ b/config/database.yml
@@ -17,8 +17,10 @@ development:
   encoding: unicode
   database: shouter_development
   pool: 5
-  username: shouter
+  username: kyle
   password:
+  min_messages: warning
+  host: localhost
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -43,8 +45,10 @@ test:
   encoding: unicode
   database: shouter_test
   pool: 5
-  username: shouter
+  username: kyle
   password:
+  min_messages: warning
+  host: localhost
 
 production:
   adapter: postgresql
